# virtual-digital-human

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  module-01.yaml  module-02.yaml  module-05.yaml  package-lock.json  pyproject.toml
apps/: README.md
docs/: 00-overview.md  01-frontend.md  02-gateway-orchestrator.md  03-asr.md  04-multimodal-affect.md  05-dialogue-state-llm.md  06-rag-kb.md  07-tts-avatar.md  08-data-ops-eval.md  09-deploy-deliverables.md  data_spec.md  database_schema.md  emotion_app_frontend_understanding.md  environment.md  final_acceptance_checklist.json  final_acceptance_checklist.md  implementation_plan.md  label_mapping.md  review_findings.md  shared_contracts.md
emotion_app/: README.md  package-lock.json  package.json
infra/: README.md
libs/: README.md
memory-bank/: README.md  architecture.md  handoff-summary.json  handoff-summary.md  progress.md
scripts/: build_data_artifacts.py  eval_asr_baseline.py  eval_latency_report.py  eval_ten_turn_stability.py  generate_review_checklist.py  manage_transcript_review.py  prepare_asr_audio.py  prepare_magicdata_eval.py  update_memory_bank.py  verify_affect_service.py  verify_asr_baseline_eval.py  verify_asr_draft_batch.py  verify_asr_postprocess.py  verify_asr_regression.py  verify_asr_service.py  verify_audio_chunk_upload.py  verify_avatar_driver_offline.py  verify_core_compose_stack.py  verify_db_schema.py  verify_dialogue_conflict_clarification.py  verify_dialogue_fallback_reply.py  verify_dialogue_high_risk_precheck.py  verify_dialogue_llm_samples.py  (+49 more)
(+265 files in other folders)
